// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/Login/LoginCard LoginCard renders correctly 1`] = `
.glamor-5 {
  max-width: 40rem;
  margin: 0 1rem;
}

.glamor-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.glamor-0 {
  text-align: center;
  padding: 1rem;
}

.glamor-1 {
  padding-bottom: 1rem;
}

.glamor-4 {
  width: 100%;
}

@media (min-width:600px) {
  .glamor-5 {
    margin: 0 auto;
  }
}

<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root glamor-5 egcdk620 MuiPaper-rounded"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiCardContent-root glamor-3 egcdk623"
    >
      <div
        className="glamor-0 egcdk621"
      />
      <div
        className="MuiFormControl-root MuiTextField-root glamor-1 egcdk624"
        onDragStart={[Function]}
        onDrop={[Function]}
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="username"
        >
          Username
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiFormControl-root MuiTextField-root glamor-1 egcdk624"
        onDragStart={[Function]}
        onDrop={[Function]}
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="Password"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="MuiCardActions-root MuiCardActions-spacing"
    >
      <button
        className="MuiButtonBase-root MuiButton-root glamor-4 egcdk622 MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          Login
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`core/Login/LoginCard mapStateToProps should return errors if there are errors 1`] = `
Object {
  "errorStatus": Object {
    "message": "Invalid Credentials",
  },
  "initialValues": Object {
    "username": "flexget",
  },
}
`;

exports[`core/Login/LoginCard mapStateToProps should return no errors if there are none 1`] = `
Object {
  "errorStatus": Object {},
  "initialValues": Object {
    "username": "flexget",
  },
}
`;
